# libenigma

./: .clang-format  .gitignore  CMakeLists.txt  version.h.in
cmake/: get_version.cmake
include/: class.h  clock.h  singleton.h  sync_queue.h  thread.h  types.h  version.h
include/log/: log.h  message.h  sink.h
include/native/: process.h
include/string/: str.h
src/: CMakeLists.txt
src/logger/: console_sink.cpp  console_sink.h  default_formatter.h  file_sink.cpp  file_sink.h  log_file.cpp  log_file.h  logger.cpp  logger.h
src/native/win32/: process_win32.cpp  win32.h
src/string/: str.cpp
test/: CMakeLists.txt  test.cpp  test_log.h  test_process.h  test_string.h
